<resources>
    <string name="app_name">FoodTopia</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="create_account_prompt">Don\'t have an account? Create one</string>
    <string name="full_name">Full Name</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="popular_recipes">Maybe you are interested</string>
    <string name="greeting_text">Welcome, %1$s</string>
    <string name="search_recipes">Search recipes...</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="my_favorites">My Favorites</string>
    <string name="no_favorites">No favorite recipes yet</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="calories_label">Calories: %1$s</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="back">back</string>
    <string name="search_title">Search</string>
    <string name="calories_icon">Calories icon</string>
</resources>