<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.foodtopia.ui.home.HomeFragment"
        android:label="@string/home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.dicoding.foodtopia.ui.search.SearchFragment"
        android:label="@string/search" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.foodtopia.ui.favorite.FavoriteFragment"
        android:label="@string/favorite" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.foodtopia.ui.profile.ProfileFragment"
        android:label="@string/profile" />

</navigation> 